# DOKE-RAG

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  PADDLEOCR_INSTALLATION.md  PDF_PARSER_QUICKSTART.md  USAGE.md  audio_processor_readme.md  pdf_parser_implementation_summary.md
docs/plans/: 2025-01-18-multimodal-pipeline-design.md
doke_rag/: __init__.py
doke_rag/config/: paths.py  pipeline_config.py
doke_rag/core/: LICENSE.LightRAG  __init__.py  lightrag.py  llm.py  operate.py  prompt.py  prompt_s.py  prompt_zh.py  utils.py
doke_rag/core/kg/: age_impl.py  chroma_impl.py  faiss_impl.py  gremlin_impl.py  json_doc_status_impl.py  json_kv_impl.py  milvus_impl.py  nano_vector_db_impl.py  networkx_impl.py  oracle_impl.py  postgres_impl.py  redis_impl.py  tidb_impl.py
doke_rag/core/llm/: Readme.md  azure_openai.py  bedrock.py  hf.py  llama_index_impl.py  lmdeploy.py  lollms.py  nvidia_openai.py  ollama.py  openai.py  zhipu.py
doke_rag/kg_construction/: entity_alignment.py  entity_types.py
doke_rag/pipeline/: __init__.py  audio_processor.py  chunking.py  chunking_txt.py  pdf_parser.py  utils.py
evaluation/: README.md  championship_eval.py  evaluate_1_2.py  sota_comparison.py  token_usage.py
evaluation/randomization/: batch_randomize_dsr1.py  loop_randomize_dsr1.py  loop_randomize_dsv3.py  single_randomize_dsr1.py  single_randomize_dsv3.py
evaluation/utils/: consolidate_results.py  final_analysis.py
evaluation/visualization/: plot_championship.py
examples/: audio_processor_example.py  pdf_parser_example.py
experiments/: run_batch_evaluation.py  run_pipeline.py  run_single_query.py
scripts/: README.md  coloring_for_neo4j.py  graphml_to_excel.py  graphrag_excel_to_neo4j.py  show_in_neo4j.py  show_in_neo4j_with_tag.py
tests/pipeline/: README.md  __init__.py  create_test_pdf.py  test_pdf_parser.py
